--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 
     /*background: color image repeat position/size */
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -46,7 +47,8 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 8px;
     padding: 0 24px;
 }
@@ -87,11 +89,16 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -166,4 +173,36 @@ ul li a:hover {
 footer {
     padding: 24px 0;
     text-align: center;
+    font-size: 14px;
+}
+
+/* media queries, só funciona se tiver a linha META VIEWPORT no HTML */
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./img/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./img/bg-desktop-light.jpg);
+    }
+}
+
+/* animação */
+
+@keyframes slide-in {
+    fron {
+        right: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
